--- a/nsis/CMakeLists.txt
+++ b/nsis/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(CPACK_PACKAGE_NAME ${CMAKE_PROJECT_NAME})
+SET(CPACK_PACKAGE_NAME ${CMAKE_PROJECT_NAME})
 
 #set(CPACK_PACKAGE_VENDOR "CMake.org")
 #set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "MyLib - CPack Component Installation Example")
@@ -10,17 +10,9 @@ set(CPACK_PACKAGE_NAME ${CMAKE_PROJECT_NAME})
 
 
 
-SET(EXE_NAME "tasker.exe")
-
-set(CPACK_PROJECT_SOURCE_DIR ${PROJECT_SOURCE_DIR})
-set(CPACK_CMAKE_CURRENT_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR})
-set(CPACK_PROJECT_BINARY_DIR ${tmgr_BINARY_DIR})
+SET(CPACK_PROJECT_SOURCE_DIR ${PROJECT_SOURCE_DIR})
+SET(CPACK_CMAKE_CURRENT_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR})
+SET(CPACK_PROJECT_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR})
 
 # Load packaging facilities.
-include(CPack)
-
-# Configure file with custom definitions for NSIS.
-#configure_file(
-#  ${PROJECT_SOURCE_DIR}/nsis/installer.nsi.in
-#  ${CMAKE_CURRENT_BINARY_DIR}/installer.nsi
-#)
+INCLUDE(CPack)
