--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 CMAKE_MINIMUM_REQUIRED( VERSION 3.9.6 )
 
-PROJECT(tasker VERSION 0.0.0)
+PROJECT(tasketor VERSION 0.0.0)
 SET(VERSION_DEV_STAGE "\" (Pre-alpha)\"")
 #SET(VERSION_DEV_STAGE "\" (Alpha)\"")
 #SET(VERSION_DEV_STAGE "\" (Beta)\"")
