Added handler for sqlite

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,6 +67,8 @@ add_executable(
     ${CMAKE_PROJECT_NAME}
 #    WIN32
     src/main.cpp
+    src/C_DbHandle.cpp
+    src/C_Project.cpp
 #    res/resource.rc
 #    res/svn.rc
 )
