--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -40,12 +40,13 @@ install:
   - move C:\mingw-w64\x86_64-8.1.0-posix-seh-rt_v6-rev0 C:\CPP\compiler
   - move C:\msys64 C:\CPP\tools
   - set PATH=%MINGW_DIR%;%PATH%
-  - C:\CPP\tools\msys64\usr\bin\bash -l -c "curl -O http://repo.msys2.org/msys/x86_64/msys2-keyring-r21.b39fb11-1-any.pkg.tar.xz"
-  - C:\CPP\tools\msys64\usr\bin\bash -l -c "curl -O http://repo.msys2.org/msys/x86_64/msys2-keyring-r21.b39fb11-1-any.pkg.tar.xz.sig"
-  - C:\CPP\tools\msys64\usr\bin\bash -l -c "pacman-key --verify msys2-keyring-r21.b39fb11-1-any.pkg.tar.xz.sig"
-  - C:\CPP\tools\msys64\usr\bin\bash -l -c "pacman --noconfirm -U msys2-keyring-r21.b39fb11-1-any.pkg.tar.xz"
-  - C:\CPP\tools\msys64\usr\bin\bash -lc "pacman --noconfirm -S zstd"
-  - C:\CPP\tools\msys64\usr\bin\bash -l -c "pacman -Sy --noconfirm mingw64/mingw-w64-x86_64-libmariadbclient mingw64/mingw-w64-x86_64-boost 2>&1"
+#  - C:\CPP\tools\msys64\usr\bin\bash -l -c "curl -O http://repo.msys2.org/msys/x86_64/msys2-keyring-r21.b39fb11-1-any.pkg.tar.xz"
+#  - C:\CPP\tools\msys64\usr\bin\bash -l -c "curl -O http://repo.msys2.org/msys/x86_64/msys2-keyring-r21.b39fb11-1-any.pkg.tar.xz.sig"
+#  - C:\CPP\tools\msys64\usr\bin\bash -l -c "pacman-key --verify msys2-keyring-r21.b39fb11-1-any.pkg.tar.xz.sig"
+#  - C:\CPP\tools\msys64\usr\bin\bash -l -c "pacman --noconfirm -U msys2-keyring-r21.b39fb11-1-any.pkg.tar.xz"
+#  - C:\CPP\tools\msys64\usr\bin\bash -l -c "pacman --noconfirm -S zstd"
+#  - C:\CPP\tools\msys64\usr\bin\bash -l -c "pacman -Sy --noconfirm mingw64/mingw-w64-x86_64-libmariadbclient mingw64/mingw-w64-x86_64-boost 2>&1"
+  - C:\CPP\tools\msys64\usr\bin\bash -l -c "pacman -Sy --noconfirm mingw64/mingw-w64-x86_64-boost 2>&1"
   # end prepare for sim local env
   - mkdir build
   - cd build
