--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -46,7 +46,7 @@ install:
   - C:\CPP\tools\msys64\usr\bin\bash -l -c "pacman --noconfirm -U msys2-keyring-r21.b39fb11-1-any.pkg.tar.xz"
 #  - C:\CPP\tools\msys64\usr\bin\bash -l -c "pacman --noconfirm -S zstd"
 #  - C:\CPP\tools\msys64\usr\bin\bash -l -c "pacman -Sy --noconfirm mingw64/mingw-w64-x86_64-libmariadbclient mingw64/mingw-w64-x86_64-boost 2>&1"
-  - C:\msys64\usr\bin\bash -l -c "pacman -Sy --noconfirm mingw-w64-x86_64-boost 2>&1"
+  - C:\CPP\tools\msys64\usr\bin\bash -l -c "pacman -Sy --noconfirm mingw-w64-x86_64-boost 2>&1"
 #  - C:\msys64\usr\bin\bash -l -c "pacman -Sy --noconfirm mingw64/mingw-w64-x86_64-boost 2>&1"
   # end prepare for sim local env
   - mkdir build
