--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -21,6 +21,8 @@ FOREACH(testSrc ${TEST_SRCS})
         #link to Boost libraries AND your targets and dependencies
         target_link_libraries(
             ${testName}
+			this_project
+			sqlite
             ${Boost_LIBRARIES}
             ws2_32
             -static
