--- a/include/version.h.in
+++ b/include/version.h.in
@@ -9,11 +9,13 @@
 #define VER_COMPANY_NAME_STR        "mjbsoft"
 #define AUTHOR                      "Mark Buttig"
 
-#define VERSION_MAJOR               @PROJECT_VERSION_MAJOR@
-#define VERSION_MINOR               @PROJECT_VERSION_MINOR@
-#define VERSION_REVISION            @PROJECT_VERSION_PATCH@
-#define VERSION_DEV_STAGE           @VERSION_DEV_STAGE@
-#define VERSION_BUILD               SVN_REVISION
+#define PROJECT_VERSION_MAJOR        @PROJECT_VERSION_MAJOR@
+#define PROJECT_VERSION_MINOR        @PROJECT_VERSION_MINOR@
+#define PROJECT_VERSION_PATCH        @PROJECT_VERSION_PATCH@
+#define PROJECT_VERSION_TWEAK        @PROJECT_VERSION_TWEAK@
+#define PROJECT_VERSION              @PROJECT_VERSION@
+#define PROJECT_VERSION_DEV_STAGE    @VERSION_DEV_STAGE@
+#define PROJECT_VERSION_BUILD        SVN_REVISION
 
 #if SVN_LOCAL_MODIFICATIONS
   #define VERSION_MODIFIER "M"
