--- a/.travis.yml
+++ b/.travis.yml
@@ -43,8 +43,8 @@ matrix:
       - travis_retry wget --no-check-certificate https://cmake.org/files/v3.20/cmake-3.20.0-rc1-linux-x86_64.tar.gz
       # this is optional, but useful:
       # do a quick md5 check to ensure that the archive we downloaded did not get compromised
-      #- echo "f3546812c11ce7f5d64dc132a566b749 *cmake-3.20.0-rc1-linux-x86_64.tar.gz" > cmake_md5.txt
-      #- md5sum -c cmake_md5.txt
+      - echo "455ff919e07f3afb938abd3c0ee7f234b690699f4980065f6001407995b0e6b4 *cmake-3.20.0-rc1-linux-x86_64.tar.gz" > cmake_sha256.txt
+      - sha256sum -c cmake_sha256.txt
       # extract the binaries; the output here is quite lengthy,
       # so we swallow it to not clutter up the travis console
       - tar -xvf cmake-3.20.0-rc1-linux-x86_64.tar.gz > /dev/null
