--- a/.travis.yml
+++ b/.travis.yml
@@ -35,9 +35,9 @@ matrix:
 
     compiler: gcc
     
-    install:    
+    install:
       - bash scripts/ci/update_cmake.sh
-    
+
     script:
       - cmake -DCI_BUILD:BOOL=ON -DCOVERAGE:BOOL=OFF -DCMAKE_BUILD_TYPE=Release ..
       - make
@@ -57,6 +57,9 @@ matrix:
           - libboost-all-dev
 
     compiler: gcc
+    
+    install:
+      - bash scripts/ci/update_cmake.sh
     
     script:
       - cmake -DCI_BUILD:BOOL=ON -DCOVERAGE:BOOL=OFF -DCMAKE_BUILD_TYPE=Debug ..
@@ -79,6 +82,9 @@ matrix:
           - libboost-all-dev
 
     compiler: gcc
+    
+    install:
+      - bash scripts/ci/update_cmake.sh
     
     script:
       - export CC=gcc-8
@@ -105,6 +111,9 @@ matrix:
 
     compiler: gcc
     
+    install:
+      - bash scripts/ci/update_cmake.sh
+    
     script:
       - export CC=gcc-8
       - export CXX=g++-8
@@ -127,6 +136,9 @@ matrix:
           - libboost-all-dev
 
     compiler: gcc
+    
+    install:
+      - bash scripts/ci/update_cmake.sh
     
     script:
       - pip install --user cpp-coveralls
