--- a/.travis.yml
+++ b/.travis.yml
@@ -54,6 +54,7 @@ matrix:
           - ubuntu-toolchain-r-test
         packages:
           - libboost-all-dev
+          - icu-devtools
 
     compiler: gcc
 
